[tool.poetry]
name = "testing-ass-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "testing_ass_2"}]

[tool.poetry.dependencies]
python = "^3.9"
robotframework-seleniumlibrary = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
